syntax = "proto3";
package tracker;

message InitRequest {
    required string email = 1;
    required string daemon_name = 2;
}

message InitResponse {
    enum Result {
        ACCEPTED = 0;
        REJECTED = 1;
        VERIFY_EMAIL = 2;
        NAME_TAKEN = 3;
    }
    required Result response = 1;
    optional string token = 2;
}

message InitConfirm {
    required string token = 1;
}

message ClientMessage {
    enum Type {
        ALIVE = 0;
        INIT_REQUEST = 1;
        INIT_CONFIRM = 2;
    }
    required Type type = 1;
    optional InitRequest init_request = 2;
    optional InitConfirm init_confirm = 3;
}

message ServerMessage {
    enum Type {
        ALIVE = 0;
        INIT_RESPONSE = 1;
    }
    required Type type = 1;
    optional InitResponse init_response = 2;
}